🔧 Add notice count
