# backend/routes/notice.js
@@ -94,6 +94,43 @@ app.get("/list", async function (req, res) {
   });
 }); // 공지사항 글 전체 목록 end
 
+// 공지사항 글 전체 개수 add (01.26 hhs)
+app.get("/listcount", async function (req, res) {
+  var selectParams = {
+    type: req.query.notice_code,
+  };
+  var selectQuery = mybatisMapper.getStatement(
+    "NOTICE",
+    "NOTICE.SELECT.noticelistcount",
+    selectParams,
+    { language: "sql", indent: "  " }
+  );
+
+  let data = [];
+  try {
+    data = await req.sequelize.query(selectQuery, {
+      type: req.sequelize.QueryTypes.SELECT,
+    });
+    console.log("TCL: data", data);
+  } catch (error) {
+    res.status(403).send({ result: "fail", error: error });
+    return;
+  }
+
+  if (data.length == 0) {
+    res.status(403).send({ result: "fail" });
+    return;
+  }
+
+  // 글 목록 꺼내오기
+  res.json({
+    result: "success",
+    user: data.map((x) => {
+      return x;
+    }),
+  });
+}); // 공지사항 글 전체 개수 end
+
 // 공지사항 글 작성 add (01.24 hhs)
 app.post("/write", async (req, res) => {
   var insertParams = {
@@ -232,7 +269,44 @@ app.get("/search", async function (req, res) {
       return x;
     }),
   });
-}); // 공지사항 글 전체 목록 end
+}); // 공지사항 글 검색 목록 end
+
+// 공지사항 글 검색(제목+글 내용) add (01.26 hhs)
+app.get("/searchcount", async function (req, res) {
+  var selectParams = {
+    keyword: req.query.keyword,
+  };
+  var selectQuery = mybatisMapper.getStatement(
+    "NOTICE",
+    "NOTICE.SELECT.noticesearchcount",
+    selectParams,
+    { language: "sql", indent: "  " }
+  );
+
+  let data = [];
+  try {
+    data = await req.sequelize.query(selectQuery, {
+      type: req.sequelize.QueryTypes.SELECT,
+    });
+    console.log("TCL: data", data);
+  } catch (error) {
+    res.status(403).send({ result: "fail", error: error });
+    return;
+  }
+
+  if (data.length == 0) {
+    res.status(403).send({ result: "fail" });
+    return;
+  }
+
+  // 글 목록 꺼내오기
+  res.json({
+    result: "success",
+    list: data.map((x) => {
+      return x;
+    }),
+  });
+}); // 공지사항 글 검색 목록 개수 end
 
 // 공지사항 댓글 작성 add (01.25 hhs)
 app.post("/comment/write", async (req, res) => {
